added comse about ghost elements
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@717 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/TODO
+++ b/TODO
@@ -3,5 +3,8 @@ C: Einlesen des Makrogitters flexibler gestallten - keine Orientierung
    und festes Makroelement vorschreiben
 D: Konforme Bisektion eibauen
 
+E: Spezielle Verfeinerungsregel fuer Geisterelemente welche statt 8 nur 4
+Kinder anlegt. 
+
 Prioritaet:
 Vorschlag 1: B, D, C
