added volume calc
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@736 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,4 +10,5 @@ Changed from version 0.3 to version 0.4
 * resetRefinementRequest now setting nospilt and added
   tagForGlobalCoarseing method 
 * added Tags for macro grid file , Tetrahedra, Hexahedra and Triangles 
+* volume calculation for Hexa and Tetra is done in split method 
 
