some changes, Licence, and docu
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@864 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/README
+++ b/README
@@ -1,18 +1,18 @@
-ALU-Grid library
+ALUGrid library
 ===================
 
 License
 -------
 
-The ALU-Grid library and headers are licensed under the GNU Lesser GPL
-version 2.1. The full license text can be found in the file COPYING
-and via http://www.gnu.org/licenses/lgpl.html .
+The ALUGrid library and headers are licensed under the GNU GPL
+version 2. The full license text can be found in the file COPYING
+and via http://www.gnu.org/licenses/gpl.html .
 
 
 Compiler 
 --------
 
-The ALU-Grid code in known to compile with the GNU Compiler version 3.4.x or higher. 
+The ALUGrid code in known to compile with the GNU Compiler version 3.4.x or higher. 
 Also with the INTEL C++ Compiler version 8.1 or higher the code compiles.
 Furthermore the code compiles with the IBM xlC compiler version 6 or higher. 
 
@@ -24,7 +24,7 @@ be used or the include path and lib path adapted.
 Getting started
 ---------------
 
-To compile the library ALU-Grid has to check several components of
+To compile the library ALUGrid has to check several components of
 your system. Run
 
   ./configure
@@ -34,16 +34,17 @@ If you intend to use the parallel version of the
 grid, make sure that you have a version of MPI, and METIS (--with-metis=PATH), and 
 PARTY (--with-party=PATH) and supply the respective flags to the 
 configure script. Dynamic load balancing can only be used if either METIS
-or PARTY Lib or both are linked to the ALU-Grid Library.
+or PARTY Lib or both are linked to the ALUGrid Library.
 
 For parallel computation MPI is needed, common packages are 
-MPICH (version 1.2.5 or higher) or LAM MPI (version 7.x).
-To compile the parallel version of the library use the MPI compiler script
-(i.e. mpiCC) by passing this as CXX variable to the configure script 
-(i.e. ./configure CXX=mpiCC). If not using the MPI compiler scripts just
-make sure that all include path and library paths are set the right way.
+OpenMPI (version 1.1.x), MPICH (version 1.2.5 or higher), 
+or LAM MPI (version 7.x). To compile the parallel version of the library 
+use the MPI compiler script (i.e. mpiCC) by passing this as CXX variable 
+to the configure script (i.e. ./configure CXX=mpiCC). If not using the 
+MPI compiler scripts just make sure that all include path and library 
+paths are set the right way.
 
-For example to compile the parallel version of ALU-Grid the configure
+For example to compile the parallel version of ALUGrid the configure
 command can look as follows: 
 
 ./configure CXX=mpiCC --with-metis="metis_path" --with-party="partylib_path"
@@ -56,29 +57,29 @@ You can use
 
   ./configure --prefix=PATH
 
-if you don't want ALU-Grid to be installed into the default directory
-(i.e. the path were ALU-Grid was unpacked).
+if you don't want ALUGrid to be installed into the default directory
+(i.e. the path were ALUGrid was unpacked).
 
 After configuration
 
   make
   make install
 
-build and install ALU-Grid.  
+build and install ALUGrid.  
 
 
 Dynamic Load Balancing Options
 ------------------------------
 
 If the compiled code is used for parallel computations including dynamic
-load balancing, then a parameter file named "lastverteilung.cfg" should be
-available in the dicrectory the program is launched. See
-"misc/lastverteilung.cfg" for an example file. 
+load balancing, then a parameter file named "loadbalancing.cfg" should be
+available in the directory the program is launched. See
+"misc/loadbalancing.cfg" for an example file. 
 
 The file must contain three values: 
-first row: ldb_under (value < 1.0), for example 0.0
-second row: ldb_over (value > 1.0), for example 1.2 
-third row: Graph partitioning method, for example 11 
+first row:  ldb_under (value < 1.0),  default value is 0.0
+second row: ldb_over (value > 1.0),   default value is 1.2 
+third row: Graph partitioning method, default method is 11 (METIS_PartGraphKway)
 
 Available methods are: 
 
@@ -101,7 +102,7 @@ methods.
 Debug Options
 --------------
 
-There are serveral debug options that can be set an shell environment
+There are several debug options that can be set an shell environment
 variable and that forces the code to produce debug output. To use this
 feature, the code must be compiled without the CPP variable NDEBUG set. 
 The following shell environment variables can be set to a level of 
@@ -116,7 +117,7 @@ VERBOSE_PLL  output produced by parallel grid methods
 Optimization 
 -------------
 
-The ALU-Grid code is highly riddled with assert statements. 
+The ALUGrid code is highly riddled with assert statements. 
 Therefore it is recommened to compile the library and the application code
 with the CPP variable NDEBUG set (i.e. -DNDEBUG) to avoid all asserts
 statement tests. 
