added library's name.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@873 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,9 @@
 /**************************************************************************
+
+  ALUGrid - a library providing a mesh manager supporting simplicial
+  and hexahedral meshes, local grid adaptivity for use in parallel
+  computations including dynamic load balancing.
+
   Copyright (C) 2004 - 2007 Robert Kloefkorn
   Copyright (C) 2005 - 2007 Andreas Dedner
   Copyright (C) 1998 - 2002 Mario Ohlberger 
