--- a/README
+++ b/README
@@ -4,9 +4,9 @@ ALUGrid library
 License
 -------
 
-The ALUGrid library and headers are licensed under the GNU GPL
-version 2. The full license text can be found in the file COPYING
-and via http://www.gnu.org/licenses/gpl.html .
+The ALUGrid library and headers are licensed under the GNU General
+Public Licence (GPL) version 2. The full license text can be found 
+in the file COPYING and via http://www.gnu.org/licenses/gpl.html .
 
 
 Compiler 
