--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,3 @@
-/**************************************************************************
-
   ALUGrid - a library providing a mesh manager supporting simplicial
   and hexahedral meshes, local grid adaptivity for use in parallel
   computations including dynamic load balancing.
@@ -9,18 +7,16 @@
   Copyright (C) 1998 - 2002 Mario Ohlberger 
   Copyright (C) 1998 - 2002 Bernhard Schupp
 
-  This program is free software; you can redistribute it and/or modify
-  it under the terms of the GNU General Public License as published by
-  the Free Software Foundation; either version 2 of the License, or
-  (at your option) any later version.
+  The ALUGrid library and headers are free software; 
+  you can redistribute it and/or modify it under the terms of the 
+  GNU General Public License as published by the Free Software Foundation; 
+  either version 2 of the License, or (at your option) any later version.
 
-  This program is distributed in the hope that it will be useful,
-  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  The ALUGrid library and headers are distributed in the hope that it will 
+  be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License along
   with this program; if not, write to the Free Software Foundation, Inc.,
   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
-
-**************************************************************************/
