--- a/AUTHORS
+++ b/AUTHORS
@@ -7,13 +7,13 @@
   Copyright (C) 2004 - 2007 Robert Kloefkorn
   Copyright (C) 2005 - 2007 Andreas Dedner
 
-  The ALUGrid library and headers are free software; 
-  you can redistribute it and/or modify it under the terms of the 
-  GNU General Public License as published by the Free Software Foundation; 
-  either version 2 of the License, or (at your option) any later version.
+  The ALUGrid library is free software; you can redistribute it and/or 
+  modify it under the terms of the GNU General Public License as 
+  published by the Free Software Foundation; either version 2 of 
+  the License, or (at your option) any later version.
 
-  The ALUGrid library and headers are distributed in the hope that it will 
-  be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+  The ALUGrid library is distributed in the hope that it will be useful, 
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
