--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Changed from version 0.41 --> 1.0
 
 major changes: 
 
-- NOTE: change of licence from GNU LGPL to GNU GPL (see COPYING)
+- NOTE: change of license from GNU LGPL to GNU GPL (see COPYING)
 - added version information 
 
 minor changes: 
