--- a/README
+++ b/README
@@ -5,7 +5,7 @@ License
 -------
 
 The ALUGrid library and headers are licensed under the GNU General
-Public Licence (GPL) version 2. The full license text can be found 
+Public License (GPL) version 2. The full license text can be found 
 in the file COPYING and via http://www.gnu.org/licenses/gpl.html .
 
 
