no object stream debug via pre proc variable.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@997 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/README
+++ b/README
@@ -131,7 +131,10 @@ Debug
 
 For debugging the code the preprocessor variable NDEBUG must not be defined
 and additionally the preprocessor variable DEBUG_ALUGRID can be defined
-for object reference counting.
+for object reference counting. In the read method of the message
+buffer for parallel computations a eof check is done on every read
+which can be disabled by passing the preprocessor variable
+NO_OBJECTSTREAM_DEBUG.
 
 
 Knowns Bugs 
