added bug to list
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1006 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,3 +20,4 @@ minor changes:
 bug fixes: 
 - removed little memory leak in generateRawHexaImage 
 - use cmath instead of math.h to compile with g++ 4.2
+- for arbitrary hexahedral grids the volume caching was wrong 
